tests/ui/invalid-key.rs
fn main() {
    crokey::key!(10);
    crokey::key!(ctrl-backpace);
    crokey::key!(ctrl--);
}
